--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "front-end",
   "version": "1.0.0",
   "description": "",
-  "source": "src/index.html",
+  "source": ["src/index.html", "src/temp.html"],
   "scripts": {
     "start": "parcel --no-cache",
     "build": "rm -rf && parcel build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "parcel": "^2.10.3"
   },
